--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
           <div class="card-body d-flex flex-column">
             <h4 class="card-title">BMI calculator</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur eum quasi sapiente nesciunt? Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
+            <p class="card-text">Body Mass Index (BMI) is a person’s weight in kilograms (or pounds) divided by the square of height in meters (or feet). A high BMI can indicate high body fatness. BMI screens for weight categories that may lead to health problems, but it does not diagnose the body fatness or health of an individual.</p>
             <a href="BMIcalc\index.html" class="card-link text-info mt-auto">View BMI calculator</a>
           </div>
         </div>
@@ -69,7 +69,7 @@
           <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">BodyFat calculator</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+            <p class="card-text">The body fat percentage (BFP) of a human or other living being is the total mass of fat divided by total body mass, multiplied by 100; body fat includes essential body fat and storage body fat. Essential body fat is necessary to maintain life and reproductive functions. </p>
             <a href="BodyFatCalc\index.html" class="card-link text-info">View Body Fat Calculator</a>
           </div>
         </div>
@@ -79,7 +79,7 @@
           <a href="images\titleimage.jpeg"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">Maintenence Calorie</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos quisquam, error quod sed cumque, odio distinctio velit nostrum temporibus necessitatibus et facere atque iure perspiciatis mollitia recusandae vero vel quam!</p>
+            <p class="card-text">Maintenance calories are precisely the number of calories your body needs to support energy expenditure.While maintaining the same level of daily activity, use a calorie tracking app to track your calories and weigh yourself daily. </p>
             <a href="MaintenanceCalorie\index.html" class="card-link text-info">View Maintenence Calorie calculator </a>
           </div>
         </div>
