--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <div class="container-fluid">
   <h1>What is FitHarsh?</h1>
   <p class="col-sm-12">FitHarsh is a website use for calculating Body mass index(BMI),
-    Body Fat, calorie maintanance.This is under developing website which moto is that every person take care of there health and know about their health.
+    Body Fat, calorie maintanance.This is under developing website which moto is that every person take care of there health and know about their health.FitHarsh website make all the health related calculator combine at one web page.There are lot more calculator are pending to upload so feel free to suggest about any health related calculator.
     Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
      a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </p>
 
